log
Sat, May  3, 2025  2:05:44 PM: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sat, May  3, 2025  2:06:54 PM: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  4|7
total_score: 5/70
92e5842
Sat, May  3, 2025  2:08:52 PM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|6
total_score: 15/70
4360195
Sat, May  3, 2025  3:07:00 PM: 
 treemap.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  13|5
total_score: 25/70
0722afb
Sat, May  3, 2025  3:11:23 PM: 
 treemap.c | 15 ++-------------
 1 file changed, 2 insertions(+), 13 deletions(-)
 tests:  13|5
total_score: 25/70
b253f36
Sat, May  3, 2025  3:13:41 PM: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
960aa9b
Sat, May  3, 2025  3:14:07 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
116630c
Sat, May  3, 2025  3:14:29 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
0794147
Sat, May  3, 2025  8:01:48 PM: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
5255d0c
Sun, May  4, 2025  6:11:24 PM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:144:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (tree->root = NULL) return NULL;
     ^~
cc1.exe: all warnings being treated as errors
61f7be3
Sun, May  4, 2025  6:11:55 PM: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:148:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (tree->root = NULL) return NULL;
     ^~
cc1.exe: all warnings being treated as errors
fae3bbf
Sun, May  4, 2025  6:12:07 PM: 
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:148:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (tree->root = NULL) return NULL;
     ^~
cc1.exe: all warnings being treated as errors
e31cf47
Sun, May  4, 2025  6:12:14 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
8f0f0c3
Sun, May  4, 2025  6:15:50 PM: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  0|0
f7dc437
Sun, May  4, 2025  6:16:29 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  25|1
total_score: 60/70
46c251d
Sun, May  4, 2025  6:19:01 PM: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:150:13: error: expected ';' before 'current'
             current = current->left;
             ^~~~~~~
12e71a0
Sun, May  4, 2025  6:19:11 PM: 
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:150:13: error: expected ';' before 'current'
             current = current->left;
             ^~~~~~~
a7b1cf5
Sun, May  4, 2025  6:47:49 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  29|0
total_score: 70/70
4277b10
